# microskin-franchise-engine

./: .env.example  README.md  microskin_india.html  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  main.py
app/core/: config.py  contracts.py  utils.py
app/data/: business_store.py
app/data/fixtures/: cities_international.py  cities_usa.py  countries_international.py  demo_data.py
app/db/: database.py  schema.py
app/db/migrations/: 001_initial_postgis.sql
app/engine/: adapters.py  city_discovery.py  clustering.py  commercial.py  country_profiles.py  reconciliation.py  scoring.py  territories.py  validation.py
app/jobs/: orchestrator.py
app/services/: exporter.py  pipeline.py  repository.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: index.html
docs/: ADMIN_WORKFLOW_GUIDE.md  ARCHITECTURE_OVERVIEW.md  CALIBRATION_MIGRATION_NOTES.md  CALIBRATION_REPORT.md  CLUSTERING_GUIDE.md  CONTRACT_EXPORT_GUIDE.md  COUNTRY_PROFILE_GUIDE.md  ENVIRONMENT_VARIABLES.md  FINAL_VALIDATION_REPORT.md  SCORING_LOGIC_GUIDE.md  SETUP.md  SOURCE_ADAPTER_GUIDE.md  TERRITORY_VALIDATION_GUIDE.md
docs/validation/sandbox/: VALIDATION_LOG.md
instance/: microskin.db
scripts/: import_calibration.py  run_validation.py  smoke_app.py
tests/integration/: test_api.py  test_pipeline.py
tests/ui/: test_ui_contract.py
tests/unit/: test_scoring.py  test_validation.py
