[tool.poetry]
name = "microskin-franchise-engine"
version = "1.0.0"
description = "Microskin Territory Intelligence Engine"
authors = ["David Robinson <dr@d2cp.ltd>"]

[tool.poetry.dependencies]
python = ">=3.14,<4"
fastapi = {extras = ["standard"], version = ">=0.100.0"}
uvicorn = {extras = ["standard"], version = ">=0.20.0"}
sqlalchemy = ">=2.0"
pydantic = ">=2.0"
reportlab = ">=4.0"
shapely = ">=2.0"
httpx = ">=0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
